--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,16 @@ div p {
     width: 100px;
     margin: 5px;
 }
+
+button {
+  display:inline-block;
+  border: none;
+  padding: 6px 12px
+  margin-bottom:0;
+  font-size: 14px
+  font-weight:normal;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 4px
+
+}
