All Foods Menu Grid

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-body {
-background: #c26000;
-}
-
-
-div.item {
-    float: left;
-    margin: 2px;
+.menu-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 200px);
+  grid-auto-rows: minmax(200px auto);
+  grid-gap: 20px;
+  justify-content: center;
+  align-content: center;
+  
 }
 
 div p {
