--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,22 @@
 .menu-grid {
+  margin: 20px;
+  background-color: rgb(199, 103, 25);
+
   display: grid;
   grid-template-columns: repeat(3, 200px);
   grid-auto-rows: minmax(200px auto);
   grid-gap: 20px;
   justify-content: center;
-  align-content: center;
-  
+  align-content: center; 
+}
+
+.menu-item{
+  margin: 10px;
+}
+
+.checkout{
+ grid-column-start: 1;
+ grid-column-end: -1;
 }
 
 div p {
